# FinalCif

./: .gitattributes  .gitignore  .python-version  .ruff.toml  AGENTS.md  CNAME  CONTRIBUTING.md  FinalCif.rc  FinalCif.vcxproj  FinalCif.vcxproj.filters  Finalcif.spec  Finalcif_installer.spec  Finalcif_installer_win.spec  Finalcif_linux_onefile.spec  Finalcif_mac.spec  Finalcif_onefile.spec  Hydrogen_solution_type.cif  LICENSE  README.md  __init__.py  app_path.py  appwindow.py  equipment.py  finalcif.cpp  finalcif.py  finalcif.spec  install_requirements  install_requirements.bat  make_linux_dist.sh  make_mac_dist.sh  multitable.docx  properties.py  pylock.toml  pyproject.toml  refine_special_details.cif  requirements.txt  requirements_devel.txt  requirements_doku.txt  resource.h  run_and_capture.py  (+5 more)
.githooks/: pre-push
.github/: FUNDING.yml
.github/workflows/: python-app.yml  python-app_Linux.yml  python-app_windows.yml  python-dist.yml  python_tests.yml
.run/: Make Documentation MAC.run.xml  compile_ui_files.run.xml  make documentation Windows.run.xml
FinalCif/: finalcif.py  setup.py
FinalCif/cif/: cif_file_io.py  text.py
FinalCif/datafiles/: bruker_data.py  bruker_frame.py  ccdc.py  p4p_reader.py  platon.py  sadabs.py  saint.py  shelx.py
FinalCif/displaymol/: mol_file_writer.py  sdm.py  write_html.py
FinalCif/docs/: conf.py  install.rst  templates.rst
FinalCif/gui/: custom_classes.py  dialogs.py  finalcif_gui.py  finalcif_gui.ui  loops.py  responseformseditor.py  vrf_classes.py
FinalCif/report/: mtools.py  references.py  report_text.py  (+2 more)
cif/: all_cif_dicts.py  atoms.py  cif_core_dict.py  cif_dict_foo.py  cif_file_io.py  cif_file_parser.py  cif_order.py  core_dict.py  core_dict_foo.py  file_parser.py  file_reader.py  hkl.py  reference.py  restraints_dict.py  text.py  twin_dict.py
cif_dk/: fileparser.py
cif_g/: file_reader.py
datafiles/: bruker_data.py  bruker_frame.py  ccdc.py  ccdc_mail.py  data.py  datatools.py  p4p_reader.py  platon.py  rigaku_data.py  sadabs.py  saint.py  shelx.py  shelx_lst.py  shelxt.py  utils.py
displaymol/: JSmol_dk.nojq.lite.js  bonds.py  mol2_file_writer.py  mol_file_writer.py  sdm.py
docs/: changelog.txt  checkcif.rst  citations.rst  cod_tools_install_windows.txt  conf.py  deposition.rst  description.rst  homepage.rst  index.rst  install.rst  loops.rst  make.bat  options.rst  report.rst  sources.rst  squeeze.rst  templates.rst
equip_property/: author_loop_templates.py  equipment.py  loop_templates.py  properties.py  tools.py
finalcif/: __init__.py  app_path.py  appwindow.py  equipment.py  finalcif_start.py  properties.py
gui/: author.py  author.ui  custom_classes.py  dialogs.py  finalcif_gui.py  finalcif_gui.ui  finalcif_gui.ui.autosave  index.html  loops.py  messages.py  response_forms.py  response_forms.ui  responseformseditor.py  responseformseditor.ui  vrf_classes.py
icon/: multitable.xcf
multitable/: __init__.py  mtools.py  multi_gui.py  multitable.py  tools.py
platon/: README.txt  compile_platon.bat
report/: archive_report.py  mtools.py  multi_gui.py  references.py  report_text.py  spgrps.py  symm.py  tables.py  templated_report.py
scripts/: Finalcif.spec  Finalcif_old.spec  _create_dist.bat  _make_win_release.py  build_for_pypi.bat  compile_ui_files.py  create_dist.bat  create_dist.py  designer.py  finalcif-install_win64.iss  finalcif-install_win64_new.iss  finalcif-start.sh  generate_keyword_mapping.py  make_linux_dist.sh  make_mac_dist.sh  make_win_realease.py  make_win_release.bat  make_win_release.py  pyqt5_minimal.7z  qt5to6.py  run_scalene.bat  upload_to_pypi.bat  version_numbers.py
tables/: mtools.py  multitable.py
template/: template1.docx  template2.docx  template2.dotx  template3.docx  template_text.docx  template_without_text.docx  templates.py
test-data/: 1000006.cif  1000007-multi.cif  1000007.cif  1519506.cif  1548072_many_atoms.cif  1923_Aminoff, G._Ni As_P 63.m m c_Nickel arsenide.cif  4060308.cif  4060310.cif  40mm.cfx  Contact_author_name_and_address.cif  Crystallographer_Details.cif  DK_ML7-66-damaged.cif  DK_ML7-66-final.cif  DK_Zucker2.abs  DK_Zucker2_01._ls  DK_Zucker2_0m._ls  DK_zucker2_0m.chk  DK_zucker2_0m.cif  Esser_JW314_0m.p4p  Esser_JW314_0m_xt.lxt  Esser_JW316_01._ls  IK_WU19.abs  MCK41.cfx  P21c-final.cif  TB_fs20_v1_0m._ls  apex_frame.sfrm  author.cif  bg_snap_01_0001.sfrm  checkcif-DK_Zucker2_0m-finalcif.html  crap.cif  cu_Ylid_Shutterless_01_0001.sfrm  deutsch.docx  foobar.cif  mo_DK_Zucker2_01_0001.sfrm  mo_IKmjs_JD07_0m._ls  nospera2.cif  ntd106c-P-1-final.cif  p21c.cif  p31c.cif  sad-final.cif  (+9 more)
tests/: helpers.py  test_SADABS.py  test_atoms.py  test_author_templates.py  test_bruker_frame.py  test_ccdc.py  test_changes_cif.py  test_checkcif.py  test_checkcif_html.py  test_checkcif_platon.py  test_cif_io.py  test_deposit.py  test_deposit_check.py  test_doi.py  test_export_templates.py  test_finalcif.py  test_finalcif_Workfolder.py  test_gemmi.py  test_hkl.py  test_import_cif.py  test_latex_report.py  test_loop_creator.py  test_loop_templates.py  test_loops.py  test_main_table.py  test_misc.py  test_molecule2D.py  test_nosperat2_cif.py  test_options.py  test_p4pfile_reader.py  test_parser.py  test_platon.py  test_references.py  test_report_text.py  test_saint.py  test_settings.py  test_shelx_scroll.py  test_shred.py  test_squeeze.py  test_statusbar.py  (+11 more)
tools/: atoms.py  checkcif.py  download.py  dsrmath.py  gui_classes.py  misc.py  options.py  platon.py  platon2.py  pupdate.py  settings.py  shred.py  space_groups.py  spgr_format.py  statusbar.py  sumformula.py  update.py  version.py
work/: compare_z_platon.py  diagnose_1519506.py  diagnose_z.py  investigate_failures.py  validate_cod.py  validate_zprime.py
(+255 files in other folders)
