[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]


[project]
name = "finalcif"
dynamic = ["version"]
authors = [
    { name = "Daniel Kratzert", email = "dkratzert@gmx.de" },
]
description = "CIF file editor"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]


dependencies = [
    "wheel",
    "certifi",
    "chardet",
    "gemmi>=0.7.5",
    "html2text",
    "lxml==6.1.0",
    "pefile",
    "pybind11",
    "python-docx",
    "packaging",
    "QtAwesome",
    "QtPy",
    "numpy>=2.3.5,<2.4",
    "requests",
    "urllib3",
    "docxtpl[subdoc]>=0.20.2",
    "shelxfile",
    "crossrefapi",
    "fastmolwidget>=0.7.4",
    "pyenchant",
    "hatchling",
    "charset-normalizer",
    "pyside6",
    "pyside6-addons",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "pyside6-stubs",
]

doc = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme",
]

[tool.uv]
# exclude-newer = "1 days"

[project.urls]
"Homepage" = "https://dkratzert.de/finalcif.html"
"Bug Tracker" = "https://github.com/dkratzert/FinalCif/issues"

[tool.hatch.version]
path = "finalcif/__init__.py"
pattern = "VERSION\\s*=\\s*(?P<version>\\d+\\.{0,1}\\d{0,1})"

[tool.uv.pip]
only-binary = [":all:"]
no-binary = ["finalcif"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/test-data",
    "/scripts",
    "/setup",
    "/tests",
    "/docs",
    "/make_release.sh",
    "/venv*",
]

[project.scripts]
finalcif = "finalcif.finalcif_start:main"
