[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]


[project]
name = "finalcif"
dynamic = ["version"]
authors = [
    { name = "Daniel Kratzert", email = "dkratzert@gmx.de" },
]
description = "CIF file editor"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]


dependencies = [
    "wheel==0.47.0",
    "certifi==2026.6.17",
    "chardet",
    "gemmi>=0.7.5",
    "html2text",
    "lxml>=6.1.1",
    "pefile",
    "pybind11>=3",
    "python-docx",
    "packaging==26.2",
    "QtAwesome",
    "QtPy",
    "numpy==2.4.6",
    "requests",
    "urllib3==2.7.0",
    "docxtpl[subdoc]>=0.20.2",
    "shelxfile==24",
    "crossrefapi",
    "fastmolwidget>=0.9.7",
    "pyenchant",
    "charset-normalizer",
    "pyside6-essentials",
    "docxcompose==2.2.0",
]

[dependency-groups]
dev = [
    "hatchling",
    "pytest",
    "ruff",
    "ty",
    #"pyside6-stubs",
]

doc = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme",
]

[tool.uv]
# exclude-newer = "1 days"

[project.urls]
"Homepage" = "https://dkratzert.de/finalcif.html"
"Bug Tracker" = "https://github.com/dkratzert/FinalCif/issues"

[tool.hatch.version]
path = "finalcif/__init__.py"
pattern = "VERSION\\s*=\\s*(?P<version>\\d+\\.{0,1}\\d{0,1})"

[tool.uv.pip]
only-binary = [":all:"]
no-binary = ["finalcif"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/test-data",
    "/scripts",
    "/setup",
    "/tests",
    "/docs",
    "/make_release.sh",
    "/venv*",
]

[project.scripts]
finalcif = "finalcif.finalcif_start:main"
